# comfyui-flakes

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  flake_compose.py  flake_data_nodes.py  flake_extra_nodes.py  flake_io.py  flake_node.py  flake_postprocess.py  flake_server.py  flake_unpack_nodes.py  full_flake_node.py  pyproject.toml
docs/plans/: todo.md
tests/: test_filename_prefix.py  test_flake_link_overrides.py  test_variant_extras.py  test_variant_stem.py
web/: api.js  flake-modal.js  flake_stack.js  modal.js  pickers.js  preset-modal.js  queue.js  utils.js
web/widgets/: flake-combo.js  flake-data-select.js  flake-generate.js  flake-model-combo.js  flake-model-preset.js  flake-preview.js  flake-stack.js  generation-data.js
